# SfmlTemplate

./: CMakeLists.txt  README.md
src/: Fps.cpp  HelpfulHeader.cpp  main.cpp
src/headers/: Fps.hpp  HelpfulHeader.hpp
